# UkrFlaiBud

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  LICENSE  Makefile  README.md  docker-compose.yml  logging.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  errors.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: health.py
backend/app/core/: config.py  logging.py  request_context.py
backend/app/database/: __init__.py  audit.py  mixins.py  outbox.py  session.py
backend/app/database/migrations/: README.md  env.py
backend/app/database/migrations/versions/: 20260716_0001_core_platform.py  20260716_0002_organization_core.py  20260716_0003_identity_access.py  20260717_0004_inventory.py  20260717_0005_inventory_seed_cleanup.py  (+9 more)
backend/app/middleware/: correlation.py
backend/app/models/: base.py
backend/app/modules/bom/: __init__.py
backend/app/modules/cnc/: __init__.py
backend/app/modules/production/: __init__.py
backend/app/repositories/: __init__.py  audit.py  base.py  outbox.py  sqlalchemy.py  sqlalchemy_audit.py  sqlalchemy_outbox.py  sqlalchemy_unit_of_work.py  unit_of_work.py
backend/app/schemas/: __init__.py  errors.py  pagination.py
backend/tests/: conftest.py  support.py  test_api.py  test_audit_outbox.py  test_bom.py  test_cnc.py  test_domain.py  test_identity_access.py  test_inventory.py  test_migrations.py  test_organization_core.py  test_pagination.py  test_repository.py
(+221 files in other folders)
