[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ukrflybud-manager-backend"
version = "0.1.0"
description = "FastAPI backend infrastructure for UKRFLYBUD Manager."
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.0,<26.0",
  "httpx>=0.28,<1.0",
  "isort>=6.0,<7.0",
  "mypy>=1.14,<2.0",
  "pre-commit>=4.0,<5.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.9,<1.0",
  "types-PyYAML>=6.0,<7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 313

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
packages = ["app"]
strict = true
warn_unused_ignores = true
disallow_any_generics = false
